fix(rpanel): Fix rpanel layout issue with banner.

--- a/client/app/main.css
+++ b/client/app/main.css
@@ -61,6 +61,10 @@ select:focus {
 input[type="email"] {
   text-transform: lowercase;
 }
+
+.body-wrapper {
+  position: relative;
+}
 /********************************************
 
             BASIC TEMPLATE.
